<resources>
    <string name="app_name">Inventory App</string>

    <string name="empty_view_title_text">Your virtual stock is empty</string>
    <string name="empty_view_subtitle_text">Get started by creating a new product</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit a Product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_pet_failed">Error with updating product</string>
    <string name="editor_insert_product_failed">"Error with saving product"</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="order_more">Order more</string>
    <string name="supplier_phone_number">supplier phone number</string>
    <string name="supplier">supplier</string>
    <string name="name_of_the_product">Name of the product</string>
    <string name="price">price - 55$</string>
    <string name="quantity">Quantity</string>
    <string name="sale">Sale</string>
    <string name="sales">Sales</string>
    <string name="editor_price">price</string>
    <string name="editor_quantity">quantity</string>
    <string name="editor_name_of_the_product">name of the product</string>
    <string name="editor_select_image">select image</string>
    <string name="editor_sales">sales</string>

</resources>
