<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/name_of_the_product"
        android:textAppearance="?android:textAppearanceLarge"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/name"
        android:text="@string/price"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sale_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/quantity"
        android:textAppearance="?android:textAppearanceMedium"/>


    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:focusable="false"
        android:text="@string/sale"/>

    <TextView
        android:id="@+id/sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sale_button"
        android:layout_alignBottom="@+id/sale_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/sales"
        android:textAppearance="?android:textAppearanceMedium"/>

</RelativeLayout>